--- a/wercker.yml
+++ b/wercker.yml
@@ -4,37 +4,37 @@ build:
   steps: 
     - script:
         name: restore
-        cwd: src/AsadCorp.TeamService
+        cwd: AsadCorp.TeamService
         code: |
           dotnet restore
     - script:
         name: build
-        cwd: src/AsadCorp.TeamService
+        cwd: AsadCorp.TeamService
         code: |
           dotnet build  
     - script:
         name: publish
-        cwd: src/AsadCorp.TeamService
+        cwd: AsadCorp.TeamService
         code: |
           dotnet publish -o publish
     - script:
         name: test-restore
-        cwd: test/AsadCorp.TeamService.Tests
+        cwd: AsadCorp.TeamService.Tests
         code: |
            dotnet restore
     - script:
         name: test-build
-        cwd: test/AsadCorp.TeamService.Tests
+        cwd: AsadCorp.TeamService.Tests
         code: |
           dotnet build
     - script:
         name: test-run
-        cwd: test/AsadCorp.TeamService.Tests
+        cwd: AsadCorp.TeamService.Tests
         code: |
           dotnet test
     - script:
         name: copy binary
-        cwd: src/AsadCorp.TeamService
+        cwd: AsadCorp.TeamService
         code: |
           cp -r . $WERCKER_OUTPUT_DIR/app 
 deploy:
