Fixing wercker.xml due to Error response from daemon: OCI runtime create failed: container_linux.go:348: starting container process caused "exec: \"/pipeline/source/app/docker_entrypoint.sh\": stat /pipeline/source/app/docker_entrypoint.sh: no such file or directory": unknown.

--- a/wercker.yml
+++ b/wercker.yml
@@ -55,6 +55,7 @@ build:
 deploy:
   steps:
     - internal/docker-push:
+        cwd: $WERCKER_OUTPUT_DIR/app
         username: $USERNAME
         password: $PASSWORD
         tag: latest
