--- a/wercker.yml
+++ b/wercker.yml
@@ -60,4 +60,4 @@ deploy:
         password: $PASSWORD
         repository: asadikhan/teamservice
         registry: https://registry.hub.docker.com
-        entrypoint: "/pipeline/source/app/docker_entrypoint.sh"
+        entrypoint: "\pipeline\source\app\docker_entrypoint.sh"
