--- a/wercker.yml
+++ b/wercker.yml
@@ -1,4 +1,4 @@
-box: microsoft/dotnet:2.0.0-sdk 
+box: microsoft/dotnet:2.1.0-sdk 
 no-response-timeout: 10
 build:
   steps: 
@@ -47,11 +47,16 @@ build:
         cwd: TeamService.Tests.Integration
         code: |
           dotnet test
+# publish
     - script:
         name: copy binary
         cwd: TeamService
         code: |
           cp -r . $WERCKER_OUTPUT_DIR/app 
+    - script:
+        name: copy entrypoint
+        code: |
+          cp docker_entrypoint.sh $WERCKER_SOURCE_DIR/app  
 deploy:
   steps:
     - script:
